--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ python:
 
 # command to install dependencies
 install:
-  - "pip install --upgrade pip"
-  - "pip install python-coveralls"
-  - "pip install coverage"
-  - "pip install nose"
+  - "pip install -r requirements.txt"
 
 # command to run tests
 script:
   - nosetests --with-coverage
 after_success:
   - coveralls
+branches:
+  only:
+    - feature/review
